cmake_minimum_required(VERSION 3.17)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_cpp main.cpp nextexceed.cpp nextexceed.h util.cpp util.h _85MaximalRectangle.cpp _85MaximalRectangle.h _739DailyTemperatures.cpp _739DailyTemperatures.h _503NextGreaterElements.cpp _503NextGreaterElements.h _503NextGreaterElements.cpp _503NextGreaterElements.h _901StockSpanner.cpp _901StockSpanner.h _239MaxSlidingWindow.cpp _239MaxSlidingWindow.h _547FindCircleNum.cpp _547FindCircleNum.h)